--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: python
 python:
-  - "3.4"
-  - "3.5"
   - "3.6"
   - "3.7"
-  - "3.8"
 
 install:
   - pip install -r requirements.txt
@@ -14,3 +11,5 @@ before_script:
 
 script:
   - pytest --cov --cov-report=xml .
+  - bash <(curl -s https://codecov.io/bash)
+
