--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -28,3 +28,8 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Generate Report
+      run: |
+        pytest --cov --cov-report=xml .
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v2
